<resources>
    <string name="app_name">FitnessFinalProject</string>
    <string name="cardio">Cardio</string>
    <string name="strength">Strength</string>
    <string name="sets">Sets: </string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="time">Time: </string>
    <string name="done">Done</string>
    <string name="reps">Reps: </string>
    <string name="update">Update</string>
    <string name="about_desc">  December 10th, 2021\n\nJason Beattie 991210004 is a 3rd year SDNE student who is interested in cybersecurity.\n\nC.Jack Jozwik 991281499 is a 3rd year Systems analyst student who is also interested in cybersecurity.
    </string>
    <string name="help_desc">
        To begin using app, select either of the two tabs at the top of the screen to select
        what kind of workout you will be focusing on. Each tab will display a list of available workouts to
        track.The strength tab also includes multiple choices for each target muscle area.\n\nTo add a new record,click the plus button in the bottom right hand corner of the screen and fill out all of the fields
        and select done. To edit any records, simply select and of the items from the list and a
        similarly page will appear to make any changes to the entry. Select Update to update the entry,
        or delete to remove it from the database.</string>
    <string name="delete">Delete</string>
    <string name="Add">+</string>
    <string name="about">About</string>
    <string name="help">Help</string>
</resources>