<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.StrengthEntryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/reps_lbl"
                style="@style/entry_text"
                android:text="@string/reps" />

            <EditText
                android:id="@+id/reps_et"
                style="@style/entry_text"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30sp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/sets_lbl"
                style="@style/entry_text"
                android:text="@string/sets" />

            <EditText
                android:id="@+id/sets_et"
                style="@style/entry_text"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/str_date_lbl"
                style="@style/entry_text"
                android:text="@string/date" />

            <DatePicker
                android:id="@+id/str_datepicker"
                android:layout_width="wrap_content"
                android:layout_height="138dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/str_time_lbl"
                style="@style/entry_text"
                android:text="@string/time" />

            <TimePicker
                android:id="@+id/str_timepicker"
                android:layout_width="wrap_content"
                android:layout_height="151sp"
                android:layout_weight="1"
                android:timePickerMode="spinner" />
        </LinearLayout>

        <Button
            android:id="@+id/str_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_margin="10sp"
            android:text="@string/update"
            />
        <Button
            android:id="@+id/str_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:layout_margin="10sp"
            android:text="@string/delete"
            />

    </LinearLayout>
</ScrollView>