<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="1sp"
    app:strokeColor="@color/black"
    app:cardCornerRadius="0sp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sets_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/basic_card_text"/>

        <TextView
            android:id="@+id/sets_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/sets_lbl"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/basic_card_text"/>

        <TextView
            android:id="@+id/reps_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sets_lbl"
            style="@style/basic_card_text"/>

        <TextView
            android:id="@+id/reps_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/reps_lbl"
            app:layout_constraintTop_toBottomOf="@id/sets_tv"
            style="@style/basic_card_text"/>

        <TextView
            android:id="@+id/datetime_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/basic_card_text"
            />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datetime_lbl"
            style="@style/basic_card_text"
            />
        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_tv"
            style="@style/basic_card_text"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>